Feature: Retrieve worldcheck list (ALL-92)
Merged from: https://gitlab.silenteight.com/hsbc-bank/hsbc-bridge/-/merge_requests/102
