# modules/hsbc-bridge/src/main/resources/openapi/openapi.yaml
@@ -117,6 +117,24 @@ paths:
               schema:
                 $ref: "#/components/schemas/SimpleModelResponse"
 
+  /v1/upload:
+    post:
+      summary: Upload file with up to 1GB limit.
+      requestBody:
+        description: File to upload.
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+      responses:
+        200:
+          description: String message with information if process succeeded.
+          content:
+            text/plain:
+              schema:
+                type: string
+
 components:
   schemas:
     CountryCtrpScreeningIndividuals:
